--- a/src/styles/Doctors.css
+++ b/src/styles/Doctors.css
@@ -5,3 +5,8 @@
     justify-content: space-between;
     margin: 120px 0 0 0; 
 }
+
+.no-doctors-message {
+    margin-left: 45%;
+    margin-top: 15%;
+}
