--- a/src/styles/MakeAnAppointmentModal.css
+++ b/src/styles/MakeAnAppointmentModal.css
@@ -1,62 +1,64 @@
 :root {
-    --light-signInUpModal: #ffffff;
-    --dark-signInUpModal: #171717;
+    --light-appointmentModal: #ffffff;
+    --dark-appointmentModal: #171717;
 
-    --light-signInUpModal-border: #999;
-    --dark-signInUpModal-border: #333;
+    --light-appointmentModal-border: #999;
+    --dark-appointmentModal-border: #333;
 
     --error: #c91818;
 }
 
 [data-theme='light'] {
-    --signInUpModal-bg: var(--light-signInUpModal);
-    --signInUpModal-fg: var(--dark-signInUpModal);
+    --appointmentModal-bg: var(--light-appointmentModal);
+    --appointmentModal-fg: var(--dark-appointmentModal);
 
-    --border-color-signInUpModal: var(--light-signInUpModal-border);
+    --border-color-appointmentModal: var(--light-appointmentModal-border);
 }
 
 [data-theme='dark'] {
-    --signInUpModal-bg: var(--dark-signInUpModal);
-    --signInUpModal-fg: var(--light-signInUpModal);
+    --appointmentModal-bg: var(--dark-appointmentModal);
+    --appointmentModal-fg: var(--light-appointmentModal);
 
-    --border-color-signInUpModal: var(--dark-signInUpModal-border);
+    --border-color-appointmentModal: var(--dark-appointmentModal-border);
 }
 
-.sign-in-container {
+.appointment-container {
     max-width: 450px;
     width: 100%;
-    border: 1px solid var(--border-color-signInUpModal);
+    border: 1px solid var(--border-color-appointmentModal);
     margin: auto;
     margin-top: 4rem;
     border-radius: 10px;
     padding: 2rem;
     height: auto;
     box-sizing: border-box; 
-    background-color: var(--signInUpModal-bg); 
+    background-color: var(--appointmentModal-bg); 
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); 
     z-index: 1001;
 }
 
-.sign-in-top-content {
+.appointment-top-content {
     text-align: center;
 }
 
-.sign-in-top-content h2 {
+.appointment-top-content h2 {
     font-size: 20px;
     font-weight: 100;
     margin-bottom: 10px;
 }
 
-.sign-in-inputs {
+.appointment-inputs {
     margin-top: 15px;
     padding-top: 15px;
 }
 
-.sign-in-input-wrapper {
+.appointment-input-wrapper {
     position: relative;
+    margin-top: 10px;
 }
 
-.sign-in-input-wrapper input {
+.appointment-input-wrapper input,
+.appointment-input-wrapper select {
     display: block;
     font-size: 16px;
     width: 100%;
@@ -69,11 +71,15 @@
     outline: none;
     border-radius: 5px;
     position: relative;
-    color: var(--signInUpModal-fg);
+    color: var(--appointmentModal-fg);
+}
+
+.appointment-input-wrapper input[type='date']::-webkit-calendar-picker-indicator {
+    filter: invert(56%) sepia(94%) saturate(3177%) hue-rotate(88deg) brightness(102%) contrast(101%);
 }
 
 .default-input-border {
-    border: 1px solid var(--border-color-signInUpModal);
+    border: 1px solid var(--border-color-appointmentModal);
 }
 
 .input-label {
@@ -99,23 +105,24 @@
     top: -7px !important;
     color: var(--error) !important;
     font-size: 13px !important;
-    background-color: var(--signInUpModal-bg) !important;
+    background-color: var(--appointmentModal-bg) !important;
     z-index: 2 !important;
 }
 
 /* Основные стили для меток */
-.sign-in-input-wrapper input:focus~.input-label,
-.sign-in-input-wrapper input:not(:placeholder-shown)~.input-label {
+.appointment-input-wrapper input:focus~.input-label,
+.appointment-input-wrapper input:not(:placeholder-shown)~.input-label,
+.label-active {
     opacity: 1;
     visibility: visible;
     top: -7px;
     color: var(--accent);
     font-size: 13px;
-    background-color: var(--signInUpModal-bg);
+    background-color: var(--appointmentModal-bg);
     z-index: 2;
 }
 
-.sign-in-input-wrapper input:focus {
+.appointment-input-wrapper input:focus {
     border: 2px solid var(--accent);
 }
 
@@ -132,7 +139,7 @@
     justify-content: space-between;
 }
 
-.sign-in-btn {
+.appointment-btn {
     background-color: var(--accent);
     color: white;
     border: none;
@@ -142,7 +149,7 @@
     cursor: pointer;
 }
 
-.disabled-sign-in-btn {
+.disabled-appointment-btn {
     background-color: #ccc; 
     cursor: not-allowed; 
     pointer-events: none;
@@ -158,9 +165,20 @@
     padding: 10px 5px;
 }
 
-/* .sign-in-btn:hover {
-    background-color: #18c91b;
+.filtred-list {
+    cursor: pointer;
+    max-height: 55px;
+    overflow-y: auto;
 }
+
+.input.default-input-border.custom-select option {
+    padding: 8px 12px;
+    background-color: #fff;
+    color: #333;
+}
+
+/* .appointment-btn:hover {
+    background-color: #18c91b;
 
 .login-btn:hover {
     background-color: #e8f2ff6e;
