--- a/src/styles/Services.css
+++ b/src/styles/Services.css
@@ -23,10 +23,8 @@
   }
 
 .tabs-content {
-    margin: 0 0 2.5rem 0;
     background-color: var(--services-bg);
     padding: 0.375rem;
-    /* border-radius: 0.75rem; */
     display: flex;
     justify-content: space-between;
     column-gap: 0.5rem;
@@ -59,4 +57,10 @@
 
 .tabs-container {
     margin: 0 2.5rem
+}
+
+.container-service-card {
+    display: flex;
+    flex-wrap: wrap;
+    /* justify-content: space-between;  */
 }
