--- a/src/styles/SignUpModal.css
+++ b/src/styles/SignUpModal.css
@@ -155,9 +155,7 @@
     position: relative;
 }
 
-.sign-up-input-wrapper input[type="email"],
-.sign-up-input-wrapper input[type="password"],
-.sign-up-input-wrapper input[type="tel"] {
+.sign-up-input-wrapper input {
     display: block;
     font-size: 16px;
     width: 100%;
@@ -202,21 +200,20 @@
     border: 2px solid var(--gray);
 }
 
-.sign-up-input:focus~.input-label,
-.sign-up-input:not(:placeholder-shown)~.input-label {
+.sign-up-input-wrapper input:focus~.input-label,
+.sign-up-input-wrapper input:not(:placeholder-shown)~.input-label {
     opacity: 1;
     visibility: visible;
     top: -7px;
     color: var(--accent);
     font-size: 13px;
-    background-color: var(--sign-up-bg);
+    background-color: var(--signInUpModal-bg);
     z-index: 2;
 }
 
-/* .sign-up-input:focus,
-.sign-up-input:focus {
-    border: 2px solid #1a73e8;
-} */
+.sign-up-input-wrapper input:focus {
+  border: 2px solid var(--accent);
+}
 
 .navigation-container {
     display: flex;
