--- a/src/styles/Loader.css
+++ b/src/styles/Loader.css
@@ -1,35 +1,90 @@
-.loading-container {
-    position: relative;
-    height: 5rem;
-    width: 5rem;
+:root {
+    --light-loader: #fff;
+    --dark-loader: #171717;
+    
+    --light-profile-details: #f3f1f6;
+    --dark-profile-details: #333;
+  }
+  
+  [data-theme='light'] {
+    --background-loader: var(--light-loader);
+    --foreground-loader: var(--dark-loader);
+  }
+  
+  [data-theme='dark'] {
+    --background-loader: var(--dark-loader);
+    --foreground-loader: var(--light-loader);
+  }
+
+.data-loader {
+	position: absolute;
+	left: 50%;
+	margin-left: -100px;
+	margin-top: 300px;
+	text-align: center;
+	padding: 2px;
 }
 
-.loading-progress {
-    position: absolute;
-    height: 100%;
-    width: 100%;
-    border-radius: 50%;
-    border: 5px solid #ACCAFF36;
+.data-loader > div:last-child {
+	position: relative;
+	width: 80px;
+	height: 15px;
+	margin: 1em auto;
 }
 
-.loading-progress::before {
-    content: "";
-    position: absolute;
-    height: 100%;
-    width: 100%;
-    border-radius: 50%;
-    border: 5px solid transparent;
-    border-top-color: #ACCAFF;
-    top: -5px;
-    left: -5px;
-    animation: spin 1s linear infinite;
+.data-loader > div:last-child > div {
+	position: absolute;
+	top: 0;
+	width: 13px;
+	height: 13px;
+	border-radius: 50%;
+	background: var(--foreground-loader);
+	animation-timing-function: cubic-bezier(0, 1, 1, 0);
 }
 
-@keyframes spin {
-    0% {
-        transform: rotate(0deg);
-    }
-    100% {
-        transform: rotate(360deg);
-    }
+.data-loader > div:last-child > div:nth-child(1) {
+	left: 8px;
+	animation: data-loader-1 0.6s infinite;
+}
+
+.data-loader > div:last-child > div:nth-child(2) {
+	left: 8px;
+	animation: data-loader-2 0.6s infinite;
+}
+
+.data-loader > div:last-child > div:nth-child(3) {
+	left: 32px;
+	animation: data-loader-2 0.6s infinite;
+}
+
+.data-loader > div:last-child > div:nth-child(4) {
+	left: 56px;
+	animation: data-loader-3 0.6s infinite;
+}
+
+@keyframes data-loader-1 {
+	0% {
+		transform: scale(0);
+	}
+	100% {
+		transform: scale(1);
+	}
+}
+
+@keyframes data-loader-2 {
+	0% {
+		transform: translate(0, 0);
+	}
+	100% {
+		transform: translate(24px, 0);
+	}
+}
+
+@keyframes data-loader-3 {
+	0% {
+		transform: scale(1);
+	}
+	100% {
+		transform: scale(0);
+	}
 }
