--- a/src/styles/Loader.css
+++ b/src/styles/Loader.css
@@ -17,9 +17,9 @@
   }
 
 .data-loader {
-	position: absolute;
+	/* position: absolute; */
 	left: 50%;
-	margin-left: -100px;
+	margin-right: 80px;
 	margin-top: 300px;
 	text-align: center;
 	padding: 2px;
