--- a/src/styles/MakeAnAppointmentModal.css
+++ b/src/styles/MakeAnAppointmentModal.css
@@ -78,6 +78,13 @@
     border: 1px solid var(--border-color-appointmentModal);
 }
 
+.loader-container {
+    width: 100%;
+    height: 100%;
+    margin-left: 40px;
+    margin-top: -300px;
+}
+
 .input-label {
     position: absolute;
     top: 20px;
