--- a/src/styles/Doctors.css
+++ b/src/styles/Doctors.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-wrap: wrap;
     gap: 10px;
-    justify-content: space-between;
+    justify-content: space-around;
     margin: 120px 0 0 0; 
 }
 
