--- a/src/styles/Loader.css
+++ b/src/styles/Loader.css
@@ -1,38 +1,38 @@
 :root {
-    --light-loader: #fff;
-    --dark-loader: #171717;
-    
-    --light-profile-details: #f3f1f6;
-    --dark-profile-details: #333;
-  }
-  
-  [data-theme='light'] {
-    --background-loader: var(--light-loader);
-    --foreground-loader: var(--dark-loader);
-  }
-  
-  [data-theme='dark'] {
-    --background-loader: var(--dark-loader);
-    --foreground-loader: var(--light-loader);
-  }
+	--light-loader: #fff;
+	--dark-loader: #171717;
+
+	--light-profile-details: #f3f1f6;
+	--dark-profile-details: #333;
+}
+
+[data-theme='light'] {
+	--background-loader: var(--light-loader);
+	--foreground-loader: var(--dark-loader);
+}
+
+[data-theme='dark'] {
+	--background-loader: var(--dark-loader);
+	--foreground-loader: var(--light-loader);
+}
 
 .data-loader {
 	position: absolute;
 	left: 50%;
-	margin-right: -100px;
+	margin-left: -100px;
 	margin-top: 300px;
 	text-align: center;
 	padding: 2px;
 }
 
-.data-loader > div:last-child {
+.data-loader>div:last-child {
 	position: relative;
 	width: 80px;
 	height: 15px;
 	margin: 1em auto;
 }
 
-.data-loader > div:last-child > div {
+.data-loader>div:last-child>div {
 	position: absolute;
 	top: 0;
 	width: 13px;
@@ -42,22 +42,22 @@
 	animation-timing-function: cubic-bezier(0, 1, 1, 0);
 }
 
-.data-loader > div:last-child > div:nth-child(1) {
+.data-loader>div:last-child>div:nth-child(1) {
 	left: 8px;
 	animation: data-loader-1 0.6s infinite;
 }
 
-.data-loader > div:last-child > div:nth-child(2) {
+.data-loader>div:last-child>div:nth-child(2) {
 	left: 8px;
 	animation: data-loader-2 0.6s infinite;
 }
 
-.data-loader > div:last-child > div:nth-child(3) {
+.data-loader>div:last-child>div:nth-child(3) {
 	left: 32px;
 	animation: data-loader-2 0.6s infinite;
 }
 
-.data-loader > div:last-child > div:nth-child(4) {
+.data-loader>div:last-child>div:nth-child(4) {
 	left: 56px;
 	animation: data-loader-3 0.6s infinite;
 }
@@ -66,6 +66,7 @@
 	0% {
 		transform: scale(0);
 	}
+
 	100% {
 		transform: scale(1);
 	}
@@ -75,6 +76,7 @@
 	0% {
 		transform: translate(0, 0);
 	}
+
 	100% {
 		transform: translate(24px, 0);
 	}
@@ -84,6 +86,7 @@
 	0% {
 		transform: scale(1);
 	}
+
 	100% {
 		transform: scale(0);
 	}
