A table for displaying doctors has been added, and filtering of doctors has been improved.

--- a/src/styles/DoctorCard.css
+++ b/src/styles/DoctorCard.css
@@ -75,13 +75,13 @@
   font-weight: 400;
 }
 
-.action-button {
+.doctor-action-button {
   display: flex;
   align-items: center;
   margin-top: 30px;
 }
 
-.action-button button {
+.doctor-action-button button {
   background-color: var(--accent);
   padding: 12px;
   margin: 0 18px;
