--- a/src/styles/Loader.css
+++ b/src/styles/Loader.css
@@ -18,9 +18,11 @@
 
 .data-loader {
 	position: absolute;
+	top: 50%;
 	left: 50%;
+	width: 200px;
 	margin-left: -100px;
-	margin-top: 300px;
+	margin-top: -26px;
 	text-align: center;
 	padding: 2px;
 }
