The Appoiments and AppoimentsResult were viewed, and the documents with the Appoiment result were received.

--- a/src/index.css
+++ b/src/index.css
@@ -113,7 +113,7 @@
 
   --profile-info-bg: var(--profile-info-bg-dark);
 
-  --tab-button-bg: var(--tab-button-bg-dark)
+  --tab-button-bg: var(--tab-button-bg-dark);
 }
 
 html,
