--- a/src/styles/organisms/Tab.css
+++ b/src/styles/organisms/Tab.css
@@ -1,12 +1,10 @@
-@import "./Page.css";
-
-/* .tabs-content {
+.tabs-content {
     background-color: var(--background);
     padding: 0.375rem;
     display: flex;
     justify-content: space-between;
     column-gap: 0.5rem;
-    margin-top: 60px;
+    margin-top: 60px; 
 }
 
 .tabs-button {
@@ -35,10 +33,5 @@
 }
 
 .tabs-container {
-    margin: 0 2.5rem
+    margin: 0 2.5rem; 
 }
-
-.container-service-card {
-    display: flex;
-    flex-wrap: wrap;
-} */
