--- a/src/styles/pages/Profile.css
+++ b/src/styles/pages/Profile.css
@@ -1,4 +1,4 @@
-.tabs-content {
+/* .tabs-content {
     background-color: var(--background);
     padding: 0.375rem;
     display: flex;
@@ -39,5 +39,4 @@
 .container-profile-card {
     display: flex;
     flex-wrap: wrap;
-    /* justify-content: space-between;  */
-}
+} */
