--- a/src/styles/organisms/Table.css
+++ b/src/styles/organisms/Table.css
@@ -61,6 +61,10 @@
     cursor: pointer;
 }
 
+.approved-row {
+    border-left: 5px solid var(--accent);
+}
+
 .cancel-icon {
     color: var(--error);
     cursor: pointer;
